euskalhack/noise-machine/juice-shop/juice-shop-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: juice-shop
  labels:
    name: juice-shop
    purpose: security-testing
